# malcord

./: LICENSE  README.md  requirements.txt  setup.cfg
malcord/: ctxcommands.py  discordtoken.py  exceptions.py
