[metadata]
name = malcord
version = 0.0.1
author = the-cult-of-integral
description = a small helper library for malicious discord development
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/the-cult-of-integral/malcord
classifiers:
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False